<resources>
    <string name="app_name">VPP</string>
    <string name="vpp_id">VPP ID</string>
    <string name="vpp_name">Name</string>
    <string name="pan_no">PAN</string>
    <string name="city">City</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="pan">PAN</string>
    <string name="payment_status">Payment Status</string>

    <string name="dashboard">Dashboard</string>
    <string name="addreference">Add Reference</string>
    <string name="signup">Register </string>
    <string name="my_profile">My Profile</string>
    <string name="signin">login</string>
    <string name="Dashboard2">My Dashboard</string>
    <string name="brokerage">Brokerage List</string>
    <string name="notifications">Notifications</string>
    <string name="client_list">Client List</string>
    <string name="my_references">My References</string>
    <string name="razorpay">Razor Pay</string>
    <string name="rejected">Rejected</string>
    <string name="my_clients">My Clients</string>
    <string name="my_earnings">My Earnings</string>
    <string name="discrepancy">Registration Tracker </string>
    <string name="subparter">Sub Partner </string>
    <string name="resend"><u>Resend</u></string>
    <string name="check1Checked">Ventura Products Explained</string>
    <string name="check1UnChecked">Ventura Products Not Explained</string>
    <string name="check2Checked">Informed about Ventura Officials calling for Account</string>
    <string name="check2UnChecked">Not Informed about Ventura Officials calling for Account</string>
    <string name="what_is_vpp">What Is VPP ?</string>
    <string name="how_it_works">How It Works ?</string>
    <string name="agree_to_vpp">Agree to be a VPP ?</string>
    <string name="already_registered">You are already registered with us. \n OTP has been sent to the mobile number registered with us.</string>
    <string name="terms_conditions_title"> The Ventura Partner Program  Payout structure is as below: </string>
    <string name="terms"><u>Terms &amp; Conditions</u></string>
    <string name="i_agree_terms"><u>I agree to Ventura Securities Ltd. terms and conditions.</u></string>
    <string name="terms_caps"><u>TERMS AND CONDITIONS</u></string>
    <string name="introductory_offer_title"><u>INTRODUCTORY OFFER</u></string>
    <string name="introductory_offer">
    <string name="ipaddress">ipAddress</string>


   If you become a Ventura Partner before 31st March 2019, you will get flat 60% of
the brokerage generated by every new client you introduce, for his / her
first 3 months as a Ventura client
    \n\n
e.g. If your client opens an account in Sept 2018, flat 60% of the brokerage
he or she generates in October, November and December 2018, will be shared
with you, irrespective of the amount of brokerage generated.
</string>
    <string name="terms_conditions">
        The Ventura Partner will introduce his / her contacts only after speaking to them and confirming that they are interested in opening an account with Ventura Securities.
\n\n
        The Ventura Partner will never engage in any unethical or illegal acts in violation of the extant rules and regulations of SEBI and the stock &amp; commodity exchanges.
        \n\n

        In any month, to be eligible to continue referral revenue sharing, you should have
introduced at least 9 New Clients in the immediate preceding 6 months.
If not, the referral revenue sharing dips to 50% of the original slab in the coming
3 months and reduces to 25% of the original slab in the following 3 months.
\n\n
E.g. Considering Sep 2018 as the current month, you should have introduced at least
9 new clients between March and August 2018 (the immediate previous 6 months).
If not, you will receive only 50% of the referral revenue share due you in September,
October and November and only 25% of the referral revenue due to you in December 2018,
January 2019 and February 2019.
\n\n
*If in March 2019, you still do not fulfill the criteria of 9 new clients in the immediate
preceding 6 months then the payout of referral revenue sharing will be stopped.
\n\n
*If in October 2018, you fulfil the criteria of 9 new clients introduced between
April 2018 and September 2018, then 100% of the referral revenue share due to you,
as per the slab, will be given. This means that in any month, if the criterion of
9 new clients to be introduced in the preceding 6 months is fulfilled, the referral revenue
sharing percentage is restored as per the original slab.
  \n\n
    Ventura Securities reserves the right to change the terms and conditions at any point of time in future.

    </string>
    <string name="documentation_default">Congratulations ! Your VPP code is : 72227. We are glad to inform you that your provisional partner registration is completed. Please click the link to know the further process to complete the documentation and final registration.</string>
    <string name="days_remaining">Registartion should be done before <b>31</b> Days</string>
    <string-array name="vpp_login">
        <item>Registered Ventura Client</item>
        <item>New User</item>
    </string-array>

    <string-array name="vpp_initials">
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Miss.</item>
    </string-array>

    <string-array name="vpp_schedule">
        <item>Action :</item>
        <item>Call Back</item>
        <item>Appointment</item>
    </string-array>
    <string-array name="vpp_how_did_you_hear">
        <item>Ventura Partner</item>
        <item>Employee Reference</item>
        <item>Social Sites</item>
        <item>Other</item>
    </string-array>

    <string-array name="profession_array">
        <item>Select Profession</item>
        <item>Service</item>
        <item>Self employed</item>
        <item>LIC Agent</item>
        <item>Financial Advisor</item>
        <item>MF Distributor</item>
        <item>Influencer</item>
        <item>Others</item>
    </string-array>


    <string-array name="profession_array1">
        <item>SELECT PROFESSION</item>
        <item>SERVICE</item>
        <item>SELF EMPLOYED</item>
        <item>LIC AGENT</item>
        <item>FINANCIAL ADVISOR</item>
        <item>MF DISTRIBUTOR</item>
        <item>INFLUENCER</item>
        <item>OTHERS</item>
    </string-array>

    <string name="change_email"><u>Resend OTP</u></string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>

    <string name="please_login"><u>Please login.</u></string>
    <string name="default_notification_channel_id">Vpp</string>
    <string name="default_notification_channel_title">Vpp</string>

    <!--   recording strings -->
    <string name="app_record">Record Video</string>
    <string name="pause">pause</string>
    <string name="play">play</string>
    <string name="action_settings">Settings</string>
    <string name="string_send">Send</string>
    <string name="not_support_camera">Camera service not available</string>
    <string name="stop_err">Can not get recorded video, please try again</string>
    <string name="confirm">Confirm</string>
    <string name="string_yes_dialog">Yes</string>
    <string name="string_no_dialog">No</string>
    <string name="string_cancel">Cancel</string>
    <string name="recording_cancel_warning">This will discard your video, do you really want to do?</string>
    <string name="stop_recording_video_err">Prolem when saving video data, please try again</string>
    <string name="x_mbs">%1$sMB</string>
    <string name="x_kbs">%1$sKB</string>

    <!--    end-->

    <string name="permission_message">Ventura Partner Program needs permission</string>
    <string name="read_phone_desc">To capture IMEI number for logging in first level automatically.</string>
    <string name="call_message">To access kyc proofs images,video,audio from local storage.</string>


    <string name="html_link"> <![CDATA[
    Share personalised link to open an account ]]>
</string>
    <string name="title_activity_share_link_dlg">ShareLinkDlg</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="mobOtpverified">"Your mobile number is verified"</string>
    <string name="emailOtpverified">"Your email id is verified"</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newuser"><font fgcolor='#191442'> New user?</font><font fgcolor='#fb9109'> Register </font></string>
    <string name="alreadyuser"><font fgcolor='#191442'> Already partner?</font><font fgcolor='#fb9109'> Please Login </font></string>
    <string name="alreadyuserwhite"><font fgcolor='#ffffff'> Already partner?</font><font fgcolor='#fb9109'> Please Login </font></string>
    <string name="string_terms"><font fgcolor='#191442'>I have read and agree to the </font><font fgcolor='#fb9109'>Privacy policy.</font></string>
    <string name="whstapp">Do you want to receive updates over<font fgcolor='#4FCE5D'> <b>whatsapp?</b> </font></string>
    <string name="whstapp1">by signing up you agree to receive communication updates on <font fgcolor='#4FCE5D'> <b>email, sms and WhatsApp.</b> </font></string>
    <string name="revenuesharing">I have read and agree to the Ventura Partner Program Revenue <font fgcolor='#4FCE5D'> <b>Sharing structure </b></font> w.e.f. 1st April 2023. </string>
    <string name="revenuesharing1"><p>I have read and agree to the Ventura Partner Program Revenue <u><font fgcolor='#1957be'><b>Sharing structure </b></font></u> w.e.f. 1st April 2023..</p></string>
    <string name="tryagain">"You have made 3 unsuccessful attempts,"<font fgcolor='#4FCE5D'> <u><b> please try after sometime.</b></u> </font></string>

</resources>
