<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".activity.PermissionActivity">

    <ImageView
        android:id="@+id/header_imageview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_height"
        android:src="@drawable/logo_new"
        android:padding="@dimen/common_margine"
        android:layout_alignParentTop="true"
        android:background="@color/ventura_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_40"
        android:paddingRight="@dimen/dimen_40">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_message"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_40"
        android:visibility="gone"
        android:paddingRight="@dimen/dimen_40">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:src="@drawable/phonereceiver" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Read Phone State"
                android:textColor="@color/text_primary"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_phone_desc"
                android:textColor="@color/text_secondary" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_40"
        android:paddingRight="@dimen/dimen_40"
        android:layout_marginTop="@dimen/dimen_20"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sd_card"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Write External Storage"
                android:textColor="@color/text_primary"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_message"
                android:textColor="@color/text_secondary"
                />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button_grant_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="@dimen/dimen_10"
            android:background="@drawable/rounded_btn"
            android:paddingBottom="@dimen/dimen_10"
            android:paddingLeft="@dimen/dimen_20"
            android:paddingRight="@dimen/dimen_20"
            android:paddingTop="@dimen/dimen_10"
            android:textStyle="bold"
            android:text="GRANT PERMISSION"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>